--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "moment": "^2.25.3",
     "mongoose": "^5.9.10",
     "morgan": "~1.9.1",
     "multer": "^1.4.2"
