--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,10 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "moment": "^2.25.3",
-    "mongoose": "^5.9.10",
+    "mongoose": "^5.9.14",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
