--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,6 @@ DATABASE="covid"
 VERSION_API = "v1"
 JWT_SECRET="pirucas quem e o ca ma lindo"
 SESSION_EXPIRATION=28800000
+NIF_ADMIN=12345
+PASS_ADMIN="12345"
+
