--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.9.14",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.8",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
