--- a/backend/.env
+++ b/backend/.env
@@ -5,4 +5,6 @@ JWT_SECRET="pirucas quem e o ca ma lindo"
 SESSION_EXPIRATION=28800000
 NIF_ADMIN=600000000
 PASS_ADMIN="600000000"
+EMAIL="pawpirucas@gmail.com"
+PASS="camalindo"
 
